--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       </div>
 
       <div class="dobra-3-descricao js-tabcontent" data-tab="content">
-
         <section class="teste">
           <div>
             <div class="js-content2">
@@ -90,7 +89,7 @@
           <div>
             <div class="js-content2">
               <h4>
-                O que fazemos
+                O que fazemos:
               </h4>
               <p>Realizamos os lançamentos de pessoas que são comprometidas com o seu propósito, que buscam através do mundo digital mudar a realidade de muitas pessoas.</p>
               <br>
@@ -119,10 +118,8 @@
             </div>
           </div>
         </section>
-
-
-
       </div>
+
     </div>
   </section>
 
