--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="dobra-3-descricao js-tabcontent" data-tab="content">
-        <section class="teste">
+        <section class="conteudo">
           <div>
             <div class="js-content2">
               <h4>
@@ -85,7 +85,7 @@
           </div>
         </section>
 
-        <section class="teste">
+        <section class="conteudo">
           <div>
             <div class="js-content2">
               <h4>
@@ -98,7 +98,7 @@
           </div>
         </section>
 
-        <section class="teste">
+        <section class="conteudo">
           <div>
             <div class="js-content2">
               <h4>
