--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <h1>
         Gestão de Performance
       </h1>
-      <h1>Aumente suas vendas e seu lucro através de anúncios na internet</h1>
-      <h1>Aceleramos o crescimento da sua empresa no mundo digital.</h1>
+      <h1>Escale as suas vendas</h1>
+      <h1>Através de anúncios online</h1>
       <h4>
         Somos uma Agência de Gestão de Performance em Ads, onde utilizamos estratégias testadas e validadas em diversos nichos, para que possamos trazer resultados exponenciais a sua empresa.
       </h4>
