--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="dobra-3-conteudo">
       <div class="dobra-3-categorias" data-anime="scroll" id="items">
         <ul class="js-tabmenu">
-          <li>
+          <li class="selecionado">
             Negócios Locais
           </li>
           <li>
