--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </section>
 
   <section id="servicos" class="dobra-3">
-    <h1 class="dobra-3-h1">ALCANCE SEUS OBJETIVOS<br> COM A DIGITAL VIRTUS</h1>
+    <h1 class="dobra-3-h1">ALCANCE SEUS OBJETIVOS<br> COM A <span style="color: #3484C3">DIGITAL</span> <span style="color: #E01F32">VIRTUS</span></h1>
     <div class="dobra-3-conteudo">
       <div class="dobra-3-categorias" data-anime="scroll" id="items">
         <ul class="js-tabmenu">
