--- a/index.html
+++ b/index.html
@@ -183,20 +183,22 @@
   </section>
 
   <section id="sobre" class="dobra-5">
-    <div>
-      <img class="dobra-5-img" src="assets/dobra-4-img.jpg" alt="">
-    </div>
-
-    <div class="dobra-5-content">
+    <div class="dobra-5-container">
       <div>
-        <h2>
-          Jarleson Almeida
-        </h2>
-        <p>
-          CEO e Fundador da Digital Virtus,
-        </p>
+        <img class="dobra-5-img" style="width: 150px;" src="assets/Monograma.png" alt="">
+      </div>
+      <div class="dobra-5-content">
+        <div>
+          <h2>
+            Jarleson Almeida
+          </h2>
+          <p>
+            CEO e Fundador da Digital Virtus,
+          </p>
+        </div>
       </div>
     </div>
+    <button class="botao">AGENDAR REUNIÃO</button>
   </section>
 
   <footer>
