--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h4>
         Somos uma Agência de Gestão de Performance em Ads, onde utilizamos estratégias testadas e validadas em diversos nichos, para que possamos trazer resultados exponenciais a sua empresa.
       </h4>
-      <button class="botao">AGENDAR REUNIÃO</button>
+      <a class="botao" href="https://gpqgypbpvn0.typeform.com/to/CyrbdLlL?utm_source=xxxxx" target="_blank">AGENDAR REUNIÃO</a>
       <p class="dobra-2-p">Clique no botão acima e agende uma reunião.</p>
     </div>
     <div class="seta">
@@ -198,7 +198,7 @@
         </div>
       </div>
     </div>
-    <button class="botao">AGENDAR REUNIÃO</button>
+    <a class="botao" href="https://gpqgypbpvn0.typeform.com/to/CyrbdLlL?utm_source=xxxxx" target="_blank">AGENDAR REUNIÃO</a>
   </section>
 
   <footer>
