--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <section id="sobre" class="dobra-5">
     <div class="dobra-5-container">
       <div>
-        <img class="dobra-5-img" style="width: 150px;" src="assets/Monograma.png" alt="">
+        <img class="dobra-5-img" src="assets/jarleson.jpg" alt="">
       </div>
       <div class="dobra-5-content">
         <div>
@@ -193,7 +193,23 @@
             Jarleson Almeida
           </h2>
           <p>
-            CEO e Fundador da Digital Virtus,
+            Fundador da Digital Virtus, atua a 4 anos no Mercado Digital, mais precisamente na Gestão de Performance em Ads, tendo atuado no tráfego pago para Negócios Locais a Grandes Lançamentos Digitais do país. Já gerenciou cerca de 5 milhões de investimentos em Tráfego, obtendo múltiplos 7 Dígitos de faturamento para seus clientes.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="dobra-5-container">
+      <div>
+        <img class="dobra-5-img" src="assets/jarleson.jpg" alt="">
+      </div>
+      <div class="dobra-5-content">
+        <div>
+          <h2>
+            Rodrigo Almeida
+          </h2>
+          <p>
+            CEO e Co-Fundador da Digital Virtus, atua também a 4 anos no Mercado Digital, prestando serviços de consultorias sobre Marketing Digital para Negócios Locais a Lançamentos Digitais, focando sempre no desenvolvimento de Estrátégias para diversos Negócios e Nichos no Mundo Online.
           </p>
         </div>
       </div>
