--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <div class="dobra-5-container">
       <div>
-        <img class="dobra-5-img" src="assets/jarleson.jpg" alt="">
+        <img class="dobra-5-img" src="assets/rodrigo.jpg" alt="">
       </div>
       <div class="dobra-5-content">
         <div>
