--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <section id="resultados" class="dobra-4">
+<!--   <section id="resultados" class="dobra-4">
     <div class="dobra-4-content">
       <h2>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -180,7 +180,7 @@
     <div>
       <img class="dobra-4-img" src="assets/dobra-4-img.jpg" alt="">
     </div>
-  </section>
+  </section> -->
 
   <section id="sobre" class="dobra-5">
     <div class="dobra-5-container">
